--- a/eventPropagation.html
+++ b/eventPropagation.html
@@ -10,7 +10,7 @@
             background-color: skyblue;
         }
         
-        .div1{
+        /* .div1{
             height: 70px;
             width: 70px;
             background-color: wheat;
@@ -38,8 +38,8 @@
             background: none;
             color: rgb(255, 255, 255);
             display: block;
-        }
-        /* #sports{
+        } */
+        #sports{
             position: absolute;
             height: 350px;
             width: 250px;
@@ -92,26 +92,26 @@
             border: solid 2px #fff;
             margin-top: 7px;
 
-        } */
+        }
 
         
     </style>
 </head>
 <body>
-    <div class="div2">
+    <!-- <div class="div2">
         2 <div class="div1">
             1
             <button>Click</button>
             <a href="" class="button">Click</a>
         </div>
-    </div>
-    <!-- <ul id="sports">
+    </div> -->
+    <ul id="sports">
         <li id="football">Football</li>
         <li id="basketball">Basketball</li>
         <li id="boxing">Boxing</li>
         <li id="tennis">Tennis</li>
         <li id="golf">Golf</li>
-    </ul> -->
+    </ul>
     <script src="eventPropagation.js"></script>
 </body>
 </html>
