--- a/web.html
+++ b/web.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta name="viewport" content="device-width,initial-scale= 1.0">    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -9,8 +9,9 @@
 </head>
 <body>
     <h1 id="main-heading" style="font: size 10vw;">OUR LIVES MATTER</h1>
+    <img src="doctor.jfif" alt="Doctor">
     <div id="container">
-        <div id="animate">My animation will go here</div>
+        
         <form action="#" method="get">
             <div class="information">
                 <div>
@@ -43,7 +44,6 @@
     <hr>
     Copyright &copy;livesmatter
 </div>
-<h3>we have to live better</h3>
 </body>
 
 <script src="web.js"></script>
