--- a/web.html
+++ b/web.html
@@ -25,7 +25,7 @@
     </li>
    <li><a href="#">About</a> </li>
     <li><a href="#">Contact </a></li>
-    <li><a href="login.html">Sign Up</a></li>
+    <li><a href="signUp.html">Sign Up</a></li>
     </ul>
     </div>
 </nav>
